test/conformance/chainsaw/validate/clusterpolicy/standard/operations/only-delete/protected-pod-update.yaml
apiVersion: v1
kind: Pod
metadata:
  name: protected-pod
  labels:
    protected: "true"
    updated: "true"
spec:
  containers:
  - name: nginx
    image: nginx:latest
