test/conformance/chainsaw/validate/clusterpolicy/standard/operations/only-delete/unprotected-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unprotected-pod
  labels:
    protected: "false"
spec:
  containers:
  - name: nginx
    image: nginx:latest
